test/cli/test/allow-existing-violations-context-vars/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    env: prod
spec:
  containers:
    - name: c
      image: nginx
