test/cli/test/allow-existing-violations-context-vars/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
globalValues:
  request.oldObject.metadata.labels.env: dev
  request.operation: UPDATE
kind: Value
metadata:
  name: values
